--- a/ShoesShop/Views/BooksPage.xaml
+++ b/ShoesShop/Views/BooksPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ShoesShop.Views.BooksPage"
+    x:Class="ShoesShop.Views.ShoesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -35,14 +35,14 @@
 
         <DataTemplate x:Key="DetailsTemplate">
             <Grid>
-                <views:BooksDetailControl ListDetailsMenuItem="{Binding}" />
+                <views:ShoesDetailControl ListDetailsMenuItem="{Binding}" />
             </Grid>
         </DataTemplate>
 
         <DataTemplate x:Key="NoSelectionContentTemplate">
             <Grid>
                 <TextBlock
-                    x:Uid="Books_NoSelection"
+                    x:Uid="Shoes_NoSelection"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     TextAlignment="Center"
@@ -84,7 +84,7 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
         <controls:ListDetailsView
-            x:Uid="Books"
+            x:Uid="Shoes"
             x:Name="ListDetailsViewControl"
             BackButtonBehavior="Manual"
             Background="Transparent"
