--- a/ShoesShop/App.xaml
+++ b/ShoesShop/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application
     x:Class="ShoesShop.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:helpers="using:ShoesShop.Helpers">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
