--- a/ShoesShop/Views/DashboardPage.xaml
+++ b/ShoesShop/Views/DashboardPage.xaml
@@ -13,6 +13,7 @@
     <Page.Resources>
         <ResourceDictionary>
             <helpers:DateTimeToDateTimeOffsetConverter x:Key="DateTimeToDateTimeOffsetConverter"/>
+            <SolidColorBrush x:Key="CardBackgroundBrush" Color="LightGray"/>
         </ResourceDictionary>
     </Page.Resources>
 
@@ -50,12 +51,13 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
+                    
                     <Border Grid.Column="0" CornerRadius="10" Background="{ThemeResource CardBackgroundBrush}" HorizontalAlignment="Left" VerticalAlignment="Top"
                      Margin="30 0" BorderBrush="LightGray" BorderThickness="1" Padding="20">
                         <StackPanel>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="80">
                                 <Border Background="#FFDF31" CornerRadius="10" Padding="6 0 6 2">
-                                    <TextBlock Text="Total Book:" Foreground="Black" FontWeight="Bold"/>
+                                    <TextBlock Text="Total Shoes:" Foreground="Black" FontWeight="Bold"/>
                                 </Border>
 
                                 <!-- Replace with your icon source -->
@@ -71,13 +73,13 @@
                         </StackPanel>
                     </Border>
 
-                    <StackPanel Grid.Column="1" Margin="80 0 0 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Spacing="20">
+                    <StackPanel Grid.Column="1" Margin="80 0 0 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Spacing="130">
                         <!-- Card for Sessions -->
                         <Border CornerRadius="10" Background="{ThemeResource CardBackgroundBrush}" BorderBrush="LightGray" BorderThickness="1" Padding="20">
                             <StackPanel>
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="80">
                                     <Border Background="#DC3545" CornerRadius="10" Padding="6 0 6 2">
-                                        <TextBlock Text="Book Sold" Foreground="White" FontWeight="Bold"/>
+                                        <TextBlock Text="Shoes Sold" Foreground="White" FontWeight="Bold"/>
                                     </Border>
 
                                     <!-- Replace with your icon source -->
@@ -151,10 +153,9 @@
 
 
                     <StackPanel Grid.Row="1" Visibility="{x:Bind ViewModel.GrapVisibility, Mode=OneWay}">
-                        <Border Margin="48,48,48,10">
-                            <oxy:PlotView MinHeight="500" Model="{x:Bind ViewModel.Revenue_ProfitGraph, Mode=OneWay}"/>
-                        </Border>
-                        <StackPanel Margin="0 0 0 20" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+                        <oxy:PlotView MinHeight="500" Margin="48 48 48 10" Model="{x:Bind ViewModel.Revenue_ProfitGraph, Mode=OneWay}"/>
+
+                        <StackPanel Margin="0 0 0 20" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" >
                             <TextBlock Text="Curreny Unit: 100,000 VND" VerticalAlignment="Center"/>
                             <Ellipse Width="10" Height="10" Fill="Blue" Margin="10,0,5,0"/>
                             <TextBlock Text="Revenue" VerticalAlignment="Center"/>
@@ -165,7 +166,7 @@
 
                     <StackPanel Grid.Row="2"  Visibility="{x:Bind ViewModel.GrapVisibility, Mode=OneWay}"
                                 Margin="10">
-                        <TextBlock Text="Book Sale Stat" FontWeight="Bold" FontSize="20"
+                        <TextBlock Text="Shoes Sale Stat" FontWeight="Bold" FontSize="20"
                                    HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20"/>
                         <Grid Background="Orange" HorizontalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
@@ -177,7 +178,7 @@
 
                             <TextBlock Grid.Column="0" Text="Image" HorizontalAlignment="Center" VerticalAlignment="Center"
                      Style="{StaticResource ListTitleStyle}" Margin="10"/>
-                            <TextBlock Grid.Column="1" Text="Book Name" HorizontalAlignment="Center" VerticalAlignment="Center"
+                            <TextBlock Grid.Column="1" Text="Shoes Title" HorizontalAlignment="Center" VerticalAlignment="Center"
                      Style="{StaticResource ListTitleStyle}" Margin="10"/>
                             <TextBlock Grid.Column="2" Text="Sold Quantity" HorizontalAlignment="Center" VerticalAlignment="Center"
                      Style="{StaticResource ListTitleStyle}" Margin="10"/>
