--- a/ShoesShop/Styles/ColorTheme.xaml
+++ b/ShoesShop/Styles/ColorTheme.xaml
@@ -1,7 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Light">
             <SolidColorBrush x:Key="CardBorderBrush" Color="#cbd5e1"/>
@@ -12,8 +12,5 @@
             <SolidColorBrush x:Key="CardBackgroundBrush" Color="#4b5563"/>
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
-    <x:Double x:Key="LargeFontSize">24</x:Double>
-
-    <x:Double x:Key="MediumFontSize">16</x:Double>
 
 </ResourceDictionary>
