--- a/ShoesShop/Views/ShoesDetailPage.xaml
+++ b/ShoesShop/Views/ShoesDetailPage.xaml
@@ -12,6 +12,7 @@
     mc:Ignorable="d">
     <Page.Resources>
         <helpers:VietnamesePriceConverter x:Key="VietnamesePriceConverter"/>
+        <helpers:DecimalToDoubleConverter x:Key="DecimalToDoubleConverter" />
     </Page.Resources>
 
     <Grid x:Name="ContentArea">
@@ -39,7 +40,7 @@
             <Style x:Key="PosterBorderStyle" TargetType="Border">
                 <Setter Property="CornerRadius" Value="10" />
                 <Setter Property="Margin" Value="0,0,40,10" />
-                <!--<Setter Property="BorderBrush" Value="{ThemeResource CardBorderBrush}" />-->
+                <Setter Property="BorderBrush" Value="{ThemeResource CardBorderBrush}" />
                 <Setter Property="BorderThickness" Value="2" />
             </Style>
         </Grid.Resources>
@@ -90,25 +91,26 @@
                                 </Paragraph>
                             </RichTextBlock>
                         </StackPanel>
-                        <StackPanel x:Name="ShoesAuthor">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Author: " />
+                        <StackPanel x:Name="ShoesBrand" >
+                            <TextBlock Style="{StaticResource LabelStyle}" Text="Brand: " />
+                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Brand, Mode=TwoWay}" />
+                        </StackPanel>
+                        <StackPanel x:Name="ShoesColor">
+                            <TextBlock Style="{StaticResource LabelStyle}" Text="Color: " />
                             <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Color, Mode=TwoWay}" />
                         </StackPanel>
-                        <!--<StackPanel x:Name="ShoesSellingPrice">
+                        <StackPanel x:Name="ShoesSellingPrice">
                             <TextBlock Style="{StaticResource LabelStyle}" Text="Selling Price: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding SellingPrice, Mode=TwoWay, Converter={StaticResource VietnamesePriceConverter}}" />
+                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Price, Mode=TwoWay, Converter={StaticResource VietnamesePriceConverter}}" />
                         </StackPanel>
-                        <StackPanel x:Name="ShoesPurchasePrice">
+                        <!--<StackPanel x:Name="ShoesPurchasePrice">
                             <TextBlock Style="{StaticResource LabelStyle}" Text="Purchase Price: " />
                             <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding PurchasePrice, Mode=TwoWay, Converter={StaticResource VietnamesePriceConverter}}" />
                         </StackPanel>-->
+                        
                         <StackPanel x:Name="ShoesCategory">
                             <TextBlock Style="{StaticResource LabelStyle}" Text="Category: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Name, Mode=TwoWay}" />
-                        </StackPanel>
-                        <StackPanel x:Name="ShoesPublishedYear">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Published Year: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Color, Mode=TwoWay}" />
+                            <TextBlock Style="{StaticResource ContentStyle}" Text="{x:Bind ViewModel.Category.Name, Mode=OneWay}" />
                         </StackPanel>
                         <StackPanel x:Name="ShoesRemaningQuantity">
                             <TextBlock Style="{StaticResource LabelStyle}" Text="Remaining quantity: " />
@@ -127,12 +129,13 @@
                     <StackPanel Spacing="16" x:Name="EditShoesStackPanel" Visibility="{x:Bind ViewModel.IsEditSession, Mode=OneWay}">
 
                         <TextBox Header="Shoes title" PlaceholderText="Title" Text="{x:Bind ViewModel.EditShoes.Name, Mode=TwoWay}" />
-                        <TextBox Header="Author" PlaceholderText="Author name" Text="{x:Bind ViewModel.EditShoes.Color, Mode=TwoWay}" />
-                        <NumberBox Header="Published year" SmallChange="1" LargeChange="10" SpinButtonPlacementMode="Inline" Value="{x:Bind ViewModel.EditShoes.Size, Mode=TwoWay}" />
+                        <TextBox Header="Brand" PlaceholderText="Brand" Text="{x:Bind ViewModel.EditShoes.Brand, Mode=TwoWay}" />
+                        <TextBox Header="Color" PlaceholderText="Shoes color" Text="{x:Bind ViewModel.EditShoes.Color, Mode=TwoWay}" />
+                        <NumberBox Header="Size" SmallChange="1" LargeChange="10" SpinButtonPlacementMode="Inline" Value="{x:Bind ViewModel.EditShoes.Size, Mode=TwoWay}" />
                         <NumberBox Header="Available quantity" SmallChange="1" LargeChange="10" SpinButtonPlacementMode="Inline" Value="{x:Bind ViewModel.EditShoes.Stock, Mode=TwoWay}"/>
-                        <TextBox Header="Description" Height="120" PlaceholderText="Write Shoes description" Text="{x:Bind ViewModel.EditShoes.Name, Mode=TwoWay}" />
-                        <!--<NumberBox Header="Purchase price" Value="{x:Bind ViewModel.EditShoes.PurchasePrice, Mode=TwoWay}" SmallChange="1000" LargeChange="10000" SpinButtonPlacementMode="Inline" />
-                        <NumberBox Header="Selling price" Value="{x:Bind ViewModel.EditShoes.SellingPrice, Mode=TwoWay}"  SmallChange="1000" LargeChange="10000" SpinButtonPlacementMode="Inline" />-->
+                        <TextBox Header="Description" Height="120" PlaceholderText="Write Shoes description" Text="{x:Bind ViewModel.EditShoes.Description, Mode=TwoWay}" />
+                        <!--<NumberBox Header="Purchase price" Value="{x:Bind ViewModel.EditShoes.PurchasePrice, Mode=TwoWay}" SmallChange="1000" LargeChange="10000" SpinButtonPlacementMode="Inline" />-->
+                        <NumberBox Header="Selling price" Value="{x:Bind ViewModel.EditShoes.Price, Mode=TwoWay, Converter={StaticResource DecimalToDoubleConverter}}"  SmallChange="1000" LargeChange="10000" SpinButtonPlacementMode="Inline" />
                         <ComboBox 
                             x:Name="CategoryCombobox" 
                             SelectionChanged="CategoryCombobox_SelectionChanged"
