--- a/ShoesShop/Views/ShellPage.xaml
+++ b/ShoesShop/Views/ShellPage.xaml
@@ -9,6 +9,10 @@
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     Loaded="OnLoaded">
 
+    <Page.Resources>
+        <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+    </Page.Resources>
+    
     <Grid>
         <Grid x:Name="AppTitleBar"
               Canvas.ZIndex="1"
@@ -29,6 +33,8 @@
             x:Name="NavigationViewControl"
             Canvas.ZIndex="0"
             IsBackButtonVisible="Visible"
+            PaneOpened="NavigationView_PaneOpened"
+            PaneClosed="NavigationView_PaneClosed"
             IsBackEnabled="{x:Bind ViewModel.IsBackEnabled, Mode=OneWay}"
             SelectedItem="{x:Bind ViewModel.Selected, Mode=OneWay}"
             IsSettingsVisible="True"
@@ -39,16 +45,8 @@
             <!--Header="{x:Bind ((ContentControl)ViewModel.Selected).Content, Mode=OneWay}"-->
             
             
-            <!--todo: add CategoryPane-->
-            <NavigationView.PaneCustomContent>
-                <Grid Background="DarkGray" Height="100">
-                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <TextBlock Text="Hello, User!" Foreground="White" FontSize="18" />
-                        <Button Content="Settings" Margin="0,10,0,0" />
-                    </StackPanel>
-                </Grid>
-            </NavigationView.PaneCustomContent>
 
+            <!--remove Header-->
             <!--<NavigationView.HeaderTemplate>
                 <DataTemplate>
                     <Grid Background="{ThemeResource PageBackground}">
@@ -82,6 +80,7 @@
                 TODO: Update item icons by updating FontIcon.Glyph properties.
                 https://docs.microsoft.com/windows/apps/design/style/segoe-fluent-icons-font#icon-list
                 -->
+                
                 <NavigationViewItem x:Uid="Shell_Dashboard" helpers:NavigationHelper.NavigateTo="ShoesShop.ViewModels.DashboardViewModel">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xF246;"/>
@@ -127,7 +126,51 @@
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE8B6;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
+                
+                <NavigationViewItem x:Name="CategoryExpander" Visibility="{x:Bind ViewModel.IsExpandedVisible, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <Expander HorizontalAlignment="Stretch" Padding="0" Margin="0">
+                        <Expander.Header>
+                            <Grid ColumnSpacing="10" MinWidth="200">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="Categories" FontWeight="Bold"/>
+                                <TextBlock Text="{x:Bind ViewModel.NumberCategory, Mode=OneWay}" Grid.Column="1"/>
+                            </Grid>
+                        </Expander.Header>
+                        <Expander.Content>
+                            <ListView ItemsSource="{x:Bind ViewModel.CategoryFilters, Mode=OneWay}" MinWidth="250">
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="Padding" Value="0"/>
+                                        <Setter Property="Margin" Value="0"/>
+                                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                                        <Setter Property="Background" Value="Transparent"/>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid Margin="0 8">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <TextBlock Text="{Binding Category.Name}" Margin="5" HorizontalAlignment="Stretch" VerticalAlignment="Center" FontWeight="Medium"/>
+                                            <Border Background="#4A69E2" CornerRadius="5" Padding="0 8" MinWidth="41" HorizontalAlignment="Right" Grid.Column="1">
+                                                <TextBlock Text="{Binding Count}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontWeight="Bold"/>
+                                            </Border>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </Expander.Content>
+                    </Expander>
+                </NavigationViewItem>
+                
             </NavigationView.MenuItems>
+            
             <Grid Padding="40" Background="{ThemeResource PageBackground}">
                 <Frame x:Name="NavigationFrame" />
             </Grid>
